[package]
name = "zen"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[dependencies]
colored = "2.1.0"
deno_core = "0.311.0"
tokio = { version = "1.40.0", features = ["full"] }
regex = "1.11.0"
url = "2.5.2"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
overflow-checks = false
debug = false
rpath = false